Fixing bug related to game ending.

--- a/lessons/5.md
+++ b/lessons/5.md
@@ -1,12 +1,10 @@
 # 5. Polishing and Deployment
 
-## Polishing client-side layer
-### Contracts and refactoring communication layer
-### Making it more robust
 ## Deployment on Heroku
 ### What is Heroku?
 ### Buildpacks
 ### Tooling and packaging the application
+#### Show the changes needed by Heroku: https://github.com/silesian-beamers/interactive-tetris/commit/822122e5e638435a0e2fc67a1b1fa0f71164f90e
 #### Releases (briefly mentioned, not included in tutorial)
 ### Final deployment
 ### Playing together in a game!
